<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/main_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_view"></FrameLayout>

    <View
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/main_rg_bottom"
        android:background="#000" />

    <RadioGroup
        android:id="@+id/main_rg_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_rb_embarrassing_things"
            style="@style/MainRadioButtonTextStyle"
            android:checked="true"
            android:drawableTop="@drawable/selector_main_rb_things"
            android:text="@string/embarrassing_things" />

        <RadioButton
            android:id="@+id/main_rb_circle"
            style="@style/MainRadioButtonTextStyle"
            android:drawableTop="@drawable/selector_main_rb_circle"
            android:text="@string/embarrassing_circle" />

        <RadioButton
            android:id="@+id/main_rb_live"
            style="@style/MainRadioButtonTextStyle"
            android:drawableTop="@drawable/selector_main_rb_live"
            android:text="@string/live" />

        <RadioButton
            android:id="@+id/main_rb_small_pager"
            style="@style/MainRadioButtonTextStyle"
            android:drawableTop="@drawable/selector_main_rb_small_pager"
            android:text="@string/small_paper" />

        <RadioButton
            android:id="@+id/main_rb_me"
            style="@style/MainRadioButtonTextStyle"
            android:drawableTop="@drawable/selector_main_rb_me"
            android:text="@string/me" />
    </RadioGroup>
</RelativeLayout>
