<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/yellow"
        android:paddingLeft="20dp"
        android:paddingRight="30dp">

        <Button
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:background="@drawable/left_bg_selector" />

        <Button
            android:layout_width="15dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:background="@drawable/right_bg_selector" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:id="@+id/embarrassing_hs"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/embarrassing_things_btn_exclusive"
                        style="@style/EmbarrassingFragmentTitleTextStyle"
                        android:text="@string/exclusive" />

                    <Button
                        android:id="@+id/embarrassing_things_btn_video"
                        style="@style/EmbarrassingFragmentTitleTextStyle"
                        android:text="@string/video" />

                    <Button
                        android:id="@+id/embarrassing_things_btn_plain_text"
                        style="@style/EmbarrassingFragmentTitleTextStyle"
                        android:text="@string/plain_text" />

                    <Button
                        android:id="@+id/embarrassing_things_btn_plain_image"
                        style="@style/EmbarrassingFragmentTitleTextStyle"
                        android:text="@string/plain_image" />

                    <Button
                        android:id="@+id/embarrassing_things_btn_essence"
                        style="@style/EmbarrassingFragmentTitleTextStyle"
                        android:text="@string/essence" />

                    <Button
                        android:id="@+id/embarrassing_things_btn_through"
                        style="@style/EmbarrassingFragmentTitleTextStyle"
                        android:text="@string/through" />
                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/embarrassing_things_iv_add"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/submit" />

            <ImageView
                android:id="@+id/embarrassing_things_iv_video"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_video"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/embarrassing_things_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>